# pith

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  SPEC.md  config.example.yaml  pyproject.toml  spec.md
docs/decisions/: 001-telegram-polling.md  002-system-prompt.md  003-extension-interface.md  004-container-runtime.md  005-autonomy-boundary.md  006-memory-lifecycle-recall.md  007-session-compaction.md  008-tool-execution-safety.md  009-observability.md  010-model-adapter.md  011-bootstrap-profile-state.md  012-external-config.md  013-unified-tool-call-and-namespaces.md  014-interaction-surfaces-and-slash-commands.md
scripts/: entrypoint.sh  install.sh
src/pith/: __init__.py  __main__.py  chat.py  cli.py  client.py  config.py  constants.py  extensions.py  mcp.py  mcp_client.py  runtime.py  server.py  storage.py
src/pith/channels/: chat.py  telegram.py
tests/: test_config.py  test_extensions.py  test_mcp.py  test_mcp_client.py  test_runtime_tools.py  test_secrets.py  test_server.py  test_storage.py
