[project]
name = "pith"
version = "0.1.0"
description = "A minimal, self-extending personal AI agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "httpx",
  "pydantic-ai",
  "uvicorn",
]

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
